<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_white"
>

    <!--<include
            android:id="@+id/toolbar_profile"
            layout="@layout/toolbar_with_back_arrow"/>-->

    <androidx.cardview.widget.CardView
            android:id="@+id/cv_up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_5dp"
            app:cardElevation="2dp"
            android:layout_margin="@dimen/dimen_10dp"

    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <TextView
                    android:id="@+id/settings_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_edit_profile"
                    android:textSize="@dimen/dimen_16sp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_margin="@dimen/dimen_10dp"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_dark_grey"/>

            <TextView
                    android:id="@+id/settings_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_languages"
                    android:textSize="@dimen/dimen_16sp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_margin="@dimen/dimen_10dp"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_dark_grey"/>

            <TextView
                    android:id="@+id/settings_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_terms_condition"
                    android:textSize="@dimen/dimen_16sp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_margin="@dimen/dimen_10dp"

            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_dark_grey"/>

            <TextView
                    android:id="@+id/settings_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_logout"
                    android:textSize="@dimen/dimen_16sp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_margin="@dimen/dimen_10dp"
            />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_5dp"
            app:cardElevation="2dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_below="@+id/cv_up_layout"

    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <TextView
                    android:id="@+id/settings_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_contact_us"
                    android:textSize="@dimen/dimen_16sp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_margin="@dimen/dimen_10dp"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_dark_grey"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/info_app_version"
                        android:textSize="@dimen/dimen_16sp"
                        android:padding="@dimen/dimen_10dp"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:layout_weight="1"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0"
                        android:textSize="@dimen/dimen_16sp"
                        android:padding="@dimen/dimen_10dp"
                        android:layout_margin="@dimen/dimen_10dp"
                />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>